--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* *{
-    outline: 1px solid red;
-} */
+*{
+    /* outline: 1px solid red; */
+}
+body{
+    background: #000;
+}
