--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,34 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@font-face {
-    font-family: 'GBShinto';
-    src: url("../fonts/shinto.otf") format("opentype");
+html{
+  scroll-behavior: smooth;
 }
-
-@layer utilities{
-    .navlink{
-        @apply relative after:absolute after:bottom-0 after:translate-y-1 after:left-1/2 after:-translate-x-1/2 after:h-[2px] after:bg-rwRed after:w-0 hover:after:w-full after:duration-300 transition-colors duration-200 
-    }
-    .shinto{
-        font-family: 'GBShinto', sans-serif ;
-        
-    }
-
+body{
+    background: #000;
 }
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #b80000 #000000;
+  }
 
-.logo{
-background: rgb(239, 68, 68);
-    background: linear-gradient(90deg, rgba(239, 68, 68, 1) 50%, rgba(255, 255, 255, 1) 50%);
-        background-size: 200%;
-        color: transparent !important;
-        -webkit-background-clip: text;
-        background-clip: text;
-        background-position: 100%;
-        transition-duration: 300ms;
-}
-.logo:hover{
-    background-position: 0%;
-    /* color: #fff !important; */
-}
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #000000;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #b80000;
+    border-radius: 20px;
+    border: 8px solid #b80000;
+  }
+  *{
+    -webkit-tap-highlight-color: transparent;
+  }
