--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,9 @@ body{
   *{
     -webkit-tap-highlight-color: transparent;
   }
+  .exit{
+    transition-timing-function: cubic-bezier(0.05,0.7,0.1,1.0);
+  }
+  .enter{
+    transition-timing-function: cubic-bezier(0.3,0.0,0.8,0.15);
+  }
